fix: correct gap in privateProfileWrap class

--- a/src/app/(privateProfile)/privateProfile.module.scss
+++ b/src/app/(privateProfile)/privateProfile.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	background-color: var(--color-silver-gray);
-	gap: 20px;
+	gap: 30px;
 	min-height: 100vh;
 
 	@media (max-width: 1100px) {
